@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 - 2022 Anton Tananaev (anton@traccar.org)
+ * Copyright 2017 - 2025 Anton Tananaev (anton@traccar.org)
  * Copyright 2017 Andrey Kunitsyn (andrey@traccar.org)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,12 +20,17 @@ import org.traccar.BaseProtocol;
 import org.traccar.ServerManager;
 import org.traccar.broadcast.BroadcastInterface;
 import org.traccar.broadcast.BroadcastService;
+import org.traccar.command.CommandSender;
+import org.traccar.command.CommandSenderManager;
 import org.traccar.model.Command;
 import org.traccar.model.Device;
+import org.traccar.model.Event;
+import org.traccar.model.ObjectOperation;
 import org.traccar.model.Position;
 import org.traccar.model.QueuedCommand;
 import org.traccar.session.ConnectionManager;
 import org.traccar.session.DeviceSession;
+import org.traccar.session.cache.CacheManager;
 import org.traccar.sms.SmsManager;
 import org.traccar.storage.Storage;
 import org.traccar.storage.StorageException;
@@ -34,11 +39,12 @@ import org.traccar.storage.query.Condition;
 import org.traccar.storage.query.Order;
 import org.traccar.storage.query.Request;
 
-import javax.annotation.Nullable;
-import javax.inject.Inject;
-import javax.inject.Singleton;
+import jakarta.annotation.Nullable;
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
 import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.HashMap;
+import java.util.Map;
 
 @Singleton
 public class CommandsManager implements BroadcastInterface {
@@ -48,31 +54,40 @@ public class CommandsManager implements BroadcastInterface {
     private final SmsManager smsManager;
     private final ConnectionManager connectionManager;
     private final BroadcastService broadcastService;
+    private final NotificationManager notificationManager;
+    private final CacheManager cacheManager;
+    private final CommandSenderManager commandSenderManager;
 
     @Inject
     public CommandsManager(
             Storage storage, ServerManager serverManager, @Nullable SmsManager smsManager,
-            ConnectionManager connectionManager, BroadcastService broadcastService) {
+            ConnectionManager connectionManager, BroadcastService broadcastService,
+            NotificationManager notificationManager, CacheManager cacheManager,
+            CommandSenderManager commandSenderManager) {
         this.storage = storage;
         this.serverManager = serverManager;
         this.smsManager = smsManager;
         this.connectionManager = connectionManager;
         this.broadcastService = broadcastService;
+        this.notificationManager = notificationManager;
+        this.cacheManager = cacheManager;
+        this.commandSenderManager = commandSenderManager;
         broadcastService.registerListener(this);
     }
 
-    public boolean sendCommand(Command command) throws Exception {
+    public QueuedCommand sendCommand(Command command) throws Exception {
         long deviceId = command.getDeviceId();
+        Device device = storage.getObject(Device.class, new Request(
+                new Columns.All(), new Condition.Equals("id", deviceId)));
+        Position position = storage.getObject(Position.class, new Request(
+                new Columns.All(), new Condition.Equals("id", device.getPositionId())));
+        BaseProtocol protocol = position != null ? serverManager.getProtocol(position.getProtocol()) : null;
+
         if (command.getTextChannel()) {
             if (smsManager == null) {
                 throw new RuntimeException("SMS not configured");
             }
-            Device device = storage.getObject(Device.class, new Request(
-                    new Columns.Include("positionId", "phone"), new Condition.Equals("id", deviceId)));
-            Position position = storage.getObject(Position.class, new Request(
-                    new Columns.All(), new Condition.Equals("id", device.getPositionId())));
             if (position != null) {
-                BaseProtocol protocol = serverManager.getProtocol(position.getProtocol());
                 protocol.sendTextCommand(device.getPhone(), command);
             } else if (command.getType().equals(Command.TYPE_CUSTOM)) {
                 smsManager.sendMessage(device.getPhone(), command.getString(Command.KEY_DATA), true);
@@ -80,16 +95,24 @@ public class CommandsManager implements BroadcastInterface {
                 throw new RuntimeException("Command " + command.getType() + " is not supported");
             }
         } else {
-            DeviceSession deviceSession = connectionManager.getDeviceSession(deviceId);
-            if (deviceSession != null && deviceSession.supportsLiveCommands()) {
-                deviceSession.sendCommand(command);
+            CommandSender sender = commandSenderManager.getSender(device);
+            if (sender != null) {
+                sender.sendCommand(device, command);
             } else {
-                storage.addObject(QueuedCommand.fromCommand(command), new Request(new Columns.Exclude("id")));
-                broadcastService.updateCommand(true, deviceId);
-                return false;
+                DeviceSession deviceSession = connectionManager.getDeviceSession(deviceId);
+                if (deviceSession != null && deviceSession.supportsLiveCommands()) {
+                    deviceSession.sendCommand(command);
+                } else if (!command.getBoolean(Command.KEY_NO_QUEUE)) {
+                    QueuedCommand queuedCommand = QueuedCommand.fromCommand(command);
+                    queuedCommand.setId(storage.addObject(queuedCommand, new Request(new Columns.Exclude("id"))));
+                    broadcastService.updateCommand(true, deviceId);
+                    return queuedCommand;
+                } else {
+                    throw new RuntimeException("Failed to send command");
+                }
             }
         }
-        return true;
+        return null;
     }
 
     public Collection<Command> readQueuedCommands(long deviceId) {
@@ -102,11 +125,17 @@ public class CommandsManager implements BroadcastInterface {
                     new Columns.All(),
                     new Condition.Equals("deviceId", deviceId),
                     new Order("id", false, count)));
+            Map<Event, Position> events = new HashMap<>();
             for (var command : commands) {
                 storage.removeObject(QueuedCommand.class, new Request(
                         new Condition.Equals("id", command.getId())));
+
+                Event event = new Event(Event.TYPE_QUEUED_COMMAND_SENT, command.getDeviceId());
+                event.set("id", command.getId());
+                events.put(event, null);
             }
-            return commands.stream().map(QueuedCommand::toCommand).collect(Collectors.toList());
+            notificationManager.updateEvents(events);
+            return commands.stream().map(QueuedCommand::toCommand).toList();
         } catch (StorageException e) {
             throw new RuntimeException(e);
         }
@@ -121,6 +150,23 @@ public class CommandsManager implements BroadcastInterface {
                     deviceSession.sendCommand(command);
                 }
             }
+        }
+    }
+
+    public void updateNotificationToken(long deviceId, String token) {
+        var key = new Object();
+        try {
+            cacheManager.addDevice(deviceId, key);
+            Device device = cacheManager.getObject(Device.class, deviceId);
+            device.set("notificationTokens", token);
+            storage.updateObject(device, new Request(
+                    new Columns.Include("attributes"),
+                    new Condition.Equals("id", deviceId)));
+            cacheManager.invalidateObject(true, Device.class, deviceId, ObjectOperation.UPDATE);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        } finally {
+            cacheManager.removeDevice(deviceId, key);
         }
     }
 
