@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Anton Tananaev (anton@traccar.org)
+ * Copyright 2023 - 2025 Anton Tananaev (anton@traccar.org)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,17 +21,14 @@ import com.google.inject.servlet.ServletScopes;
 import net.fortuna.ical4j.model.Period;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.traccar.helper.DateUtil;
+import org.traccar.helper.LogAction;
 import org.traccar.model.BaseModel;
 import org.traccar.model.Calendar;
 import org.traccar.model.Device;
 import org.traccar.model.Group;
 import org.traccar.model.Report;
 import org.traccar.model.User;
-import org.traccar.reports.EventsReportProvider;
-import org.traccar.reports.RouteReportProvider;
-import org.traccar.reports.StopsReportProvider;
-import org.traccar.reports.SummaryReportProvider;
-import org.traccar.reports.TripsReportProvider;
 import org.traccar.reports.common.ReportMailer;
 import org.traccar.storage.Storage;
 import org.traccar.storage.StorageException;
@@ -39,25 +36,32 @@ import org.traccar.storage.query.Columns;
 import org.traccar.storage.query.Condition;
 import org.traccar.storage.query.Request;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
+
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.util.Collections;
 import java.util.Date;
-import java.util.List;
+import java.util.HashSet;
+import java.util.Set;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
-public class TaskReports implements ScheduleTask {
+public class TaskReports extends SingleScheduleTask {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(TaskReports.class);
 
-    private static final long CHECK_PERIOD_MINUTES = 1;
+    private static final long CHECK_PERIOD_MINUTES = 15;
 
+    private final LogAction actionLogger;
     private final Storage storage;
     private final Injector injector;
 
     @Inject
-    public TaskReports(Storage storage, Injector injector) {
+    public TaskReports(LogAction actionLogger, Storage storage, Injector injector) {
+        this.actionLogger = actionLogger;
         this.storage = storage;
         this.injector = injector;
     }
@@ -80,15 +84,16 @@ public class TaskReports implements ScheduleTask {
                 var lastEvents = calendar.findPeriods(lastCheck);
                 var currentEvents = calendar.findPeriods(currentCheck);
 
-                if (!lastEvents.isEmpty() && currentEvents.isEmpty()) {
-                    Period period = lastEvents.iterator().next();
+                Set<Period<Instant>> finishedEvents = new HashSet<>(lastEvents);
+                finishedEvents.removeAll(currentEvents);
+                for (Period<Instant> period : finishedEvents) {
                     RequestScoper scope = ServletScopes.scopeRequest(Collections.emptyMap());
                     try (RequestScoper.CloseableScope ignored = scope.open()) {
-                        executeReport(report, period.getStart(), period.getEnd());
+                        executeReport(report, Date.from(period.getStart()), Date.from(period.getEnd()));
                     }
                 }
             }
-        } catch (StorageException e) {
+        } catch (Exception e) {
             LOGGER.warn("Scheduled reports error", e);
         }
     }
@@ -98,48 +103,39 @@ public class TaskReports implements ScheduleTask {
         var deviceIds = storage.getObjects(Device.class, new Request(
                 new Columns.Include("id"),
                 new Condition.Permission(Device.class, Report.class, report.getId())))
-                .stream().map(BaseModel::getId).collect(Collectors.toList());
+                .stream().map(BaseModel::getId).toList();
+        var deviceIdsPart = deviceIds.stream()
+                .map(id -> "deviceId=" + id)
+                .collect(Collectors.joining("&"));
+
         var groupIds = storage.getObjects(Group.class, new Request(
                 new Columns.Include("id"),
                 new Condition.Permission(Group.class, Report.class, report.getId())))
-                .stream().map(BaseModel::getId).collect(Collectors.toList());
+                .stream().map(BaseModel::getId).toList();
+        var groupIdsPart = groupIds.stream()
+                .map(id -> "groupId=" + id)
+                .collect(Collectors.joining("&"));
+
         var users = storage.getObjects(User.class, new Request(
-                new Columns.Include("id"),
+                new Columns.All(),
                 new Condition.Permission(User.class, Report.class, report.getId())));
 
-        ReportMailer reportMailer = injector.getInstance(ReportMailer.class);
+        StringBuilder url = new StringBuilder("/reports/");
+        url.append(report.getType()).append('?');
+        if (!deviceIdsPart.isEmpty()) {
+            url.append(deviceIdsPart).append('&');
+        }
+        if (!groupIdsPart.isEmpty()) {
+            url.append(groupIdsPart).append('&');
+        }
+        url.append("from=").append(URLEncoder.encode(DateUtil.formatDate(from, true), StandardCharsets.UTF_8));
+        url.append('&');
+        url.append("to=").append(URLEncoder.encode(DateUtil.formatDate(to, true), StandardCharsets.UTF_8));
 
+        ReportMailer reportMailer = injector.getInstance(ReportMailer.class);
         for (User user : users) {
-            switch (report.getType()) {
-                case "events":
-                    var eventsReportProvider = injector.getInstance(EventsReportProvider.class);
-                    reportMailer.sendAsync(user.getId(), stream -> eventsReportProvider.getExcel(
-                            stream, user.getId(), deviceIds, groupIds, List.of(), from, to));
-                    break;
-                case "route":
-                    var routeReportProvider = injector.getInstance(RouteReportProvider.class);
-                    reportMailer.sendAsync(user.getId(), stream -> routeReportProvider.getExcel(
-                            stream, user.getId(), deviceIds, groupIds, from, to));
-                    break;
-                case "summary":
-                    var summaryReportProvider = injector.getInstance(SummaryReportProvider.class);
-                    reportMailer.sendAsync(user.getId(), stream -> summaryReportProvider.getExcel(
-                            stream, user.getId(), deviceIds, groupIds, from, to, false));
-                    break;
-                case "trips":
-                    var tripsReportProvider = injector.getInstance(TripsReportProvider.class);
-                    reportMailer.sendAsync(user.getId(), stream -> tripsReportProvider.getExcel(
-                            stream, user.getId(), deviceIds, groupIds, from, to));
-                    break;
-                case "stops":
-                    var stopsReportProvider = injector.getInstance(StopsReportProvider.class);
-                    reportMailer.sendAsync(user.getId(), stream -> stopsReportProvider.getExcel(
-                            stream, user.getId(), deviceIds, groupIds, from, to));
-                    break;
-                default:
-                    LOGGER.warn("Unsupported report type {}", report.getType());
-                    break;
-            }
+            actionLogger.report(null, user.getId(), true, report.getType(), from, to, deviceIds, groupIds);
+            reportMailer.sendAsync(user, url.toString());
         }
     }
 
